# Changelogs

## 1.2.8
### New Features
* 
### Bugfixes
* Implement #13 fixing issue with port when using proxy
### Changes
* 

## 1.2.7
### New Features
* Add support to display camera values that counts people. needs to be on a mqtt toipc camera/counting
* Display Crowd-Density Data on Map
### Bugfixes
* Rename Adminmodel.cs to AdminModel.cs, cause it sould be Uppercase!
* Fix a Parsing Bug in Lora-Map/Model/PositionItem.cs
### Changes
* Move the Dockerfile to the parent project Repository

## 1.2.6
### New Features
* New types of marker for a person, so you can add drawing inside

## 1.2.5
### New Features
* Implement #10 text Letzer Datenempfang is too long when scrollbar is there
### Bugfixes
* Implement #11 set textsize for every zoomlevel
### Changes
* Add an link to kml to geojson converter

## 1.2.4
### New Features
* Possible to draw textmarkers on map (eg. for static text in a polygon)
* Now using MGRS as default output

## 1.2.3
### New Features
* Implement #9 display polygons and marker on the map
### Bugfixes
* change the wort get to post
### Changes
* Default zoomlevel is now 16

## 1.2.2
### Bugfixes
* When only recieve a panic packet with gps data, update also the normal location on the map

## 1.2.1
### New Features
* Implement #6 Load the map from the Device
### Bugfixes
* Show now output 200 of images from Webserver
### Changes
* Now layers.png is also exported

## 1.2.0
### New Features
* Implement #4 Possible to Ex and Import Settings
### Bugfixes
* Move username and password to configfile
### Changes
* Verifiy names.json when sending
* Add logger to Programm

## 1.1.7
### New Features
* Implement #8 Editor for Names and Icons
### Bugfixes
* Fixing missing dependencys of Mono.System.Web in deb packet
* Fixing a Bug when map is not running on port 8080
### Changes
* New Batterylevels
* Change textcolors in Marker.svg

## 1.1.6
### New Features
* new Levels for Battery, so that is ~ 1/5 of time for each Icon
* #5 Create adminpannel

## 1.1.5