@@ -5,6 +5,7 @@
 * 
 ### Bugfixes
 * Implement #13 fixing issue with port when using proxy
+* Implement #14 show description on map in tooltip on area
 ### Changes
 * 
 
